@@ -45,6 +45,7 @@ extern "C" {
 #include "utils/optional.ipp"
 #include "utils/signals/exceptions.hpp"
 #include "utils/signals/misc.hpp"
+#include "utils/stacktrace.hpp"
 
 namespace fs = utils::fs;
 namespace signals = utils::signals;
@@ -133,6 +134,8 @@ engine::check_interrupt(void)
 /// * Reset a set of critical environment variables to known good values.
 /// * Reset the umask to a known value.
 /// * Reset the signal handlers.
+/// * Raise the core size to the maximum allowed to permit gathering a stack
+///   trace of crashed tests.
 ///
 /// \param cwd Path to the new cwd for the process.
 ///
@@ -176,4 +179,6 @@ engine::isolate_process(const fs::path& cwd)
     if (::chdir(cwd.c_str()) == -1)
         throw std::runtime_error(F("Failed to enter work directory %s") % cwd);
     utils::setenv("HOME", fs::current_path().str());
+
+    utils::unlimit_core_size();
 }
